[gd_scene load_steps=6 format=3 uid="uid://kh2nqmgjonop"]

[ext_resource type="Script" path="res://scripts/scr_buttons/+gun_bulet_speed.gd" id="1_ewf71"]
[ext_resource type="Texture2D" uid="uid://btgts2acrgbp5" path="res://sprites/spr_buttons/+speed_bullet.png" id="1_hfmch"]
[ext_resource type="FontFile" uid="uid://2lp6xig6fljk" path="res://fonts/windows_command_prompt.ttf" id="1_vke65"]
[ext_resource type="AudioStream" uid="uid://vwbatgl43v2y" path="res://sounds/Blip_Select4.wav" id="2_fh14h"]
[ext_resource type="AudioStream" uid="uid://ytua1fua0xg3" path="res://sounds/Powerup4.wav" id="3_1lk44"]

[node name="+gun_bulet_speed" type="Button"]
offset_right = 206.0
offset_bottom = 273.0
focus_mode = 0
icon = ExtResource("1_hfmch")
flat = true
script = ExtResource("1_ewf71")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.1
one_shot = true
autostart = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 103.0
offset_top = 172.0
offset_right = 201.0
offset_bottom = 267.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("1_vke65")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[shake]   +
BULLET SPEED"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_fh14h")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_1lk44")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer2D2" to="." method="_on_audio_stream_player_2d_2_finished"]
